samples/_failures_safe/1761257429_31fafb_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_32c6f2ca.c: In function ‘main’:
./samples/SAFE/__tmp_32c6f2ca.c:155:5: error: expected declaration or statement at end of input
  155 |     printf("Final state: %s\n", state_to_string(sm->current_state));
      |     ^~~~~~
